Bug 1027343 - Geometry change flag needs to be set for modified layer tree. r=mattwoodrow, a=2.0+