gfx/layers/LayerTreeInvalidation.cpp
@@ -177,6 +177,7 @@ struct LayerPropertiesBase : public LayerProperties
 
     if (mUseClipRect && otherClip) {
       if (!mClipRect.IsEqualInterior(*otherClip)) {
+        aGeometryChanged = true;
         nsIntRegion tmp; 
         tmp.Xor(mClipRect, *otherClip); 
         AddRegion(result, tmp);
@@ -278,6 +279,7 @@ struct ContainerLayerProperties : public LayerPropertiesBase
         invalidateChildsCurrentArea = true;
       }
       if (invalidateChildsCurrentArea) {
+        aGeometryChanged = true;
         gfx3DMatrix transform;
         gfx::To3DMatrix(child->GetTransform(), transform);
         AddTransformedRegion(result, child->GetVisibleRegion(), transform);
@@ -322,6 +324,7 @@ struct ColorLayerProperties : public LayerPropertiesBase
     ColorLayer* color = static_cast<ColorLayer*>(mLayer.get());
 
     if (mColor != color->GetColor()) {
+      aGeometryChanged = true;
       return NewTransformedBounds();
     }
 
@@ -348,6 +351,7 @@ struct ImageLayerProperties : public LayerPropertiesBase
     ImageLayer* imageLayer = static_cast<ImageLayer*>(mLayer.get());
     
     if (!imageLayer->GetVisibleRegion().IsEqual(mVisibleRegion)) {
+      aGeometryChanged = true;
       nsIntRect result = NewTransformedBounds();
       result = result.Union(OldTransformedBounds());
       return result;
@@ -357,6 +361,7 @@ struct ImageLayerProperties : public LayerPropertiesBase
         mFilter != imageLayer->GetFilter() ||
         mScaleToSize != imageLayer->GetScaleToSize() ||
         mScaleMode != imageLayer->GetScaleMode()) {
+      aGeometryChanged = true;
       return NewTransformedBounds();
     }
 
